k8s_resources/monitoring_stack/monitoring_ingresses.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
  name: grafana
  namespace: monitoring
spec:
  tls:
    - hosts:
        - k8s.local
  rules:
    - host: grafana.k8s.local
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: prometheus
  namespace: monitoring
spec:
  tls:
    - hosts:
        - k8s.local
  rules:
    - host: prometheus.k8s.local
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-k8s
              servicePort: 9090
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: alertmanager
  namespace: monitoring
spec:
  tls:
    - hosts:
        - k8s.local
  rules:
    - host: alertmanager.k8s.local
      http:
        paths:
          - path: /
            backend:
              serviceName: alertmanager-main
              servicePort: 9093
